syntax = "proto3";

package wallaby.v1;

import "wallaby/v1/types.proto";

option go_package = "github.com/josephjohncox/wallaby/gen/go/wallaby/v1;wallabypb";

message SchemaColumn {
  string name = 1;
  string type = 2;
  bool nullable = 3;
  bool generated = 4;
  string expression = 5;
}

message Schema {
  string name = 1;
  string namespace = 2;
  int64 version = 3;
  repeated SchemaColumn columns = 4;
}

message Record {
  string table = 1;
  string operation = 2;
  bytes key = 3;
  bytes before_json = 4;
  bytes after_json = 5;
  string ddl = 6;
  int64 timestamp_unix_millis = 7;
  int64 schema_version = 8;
  repeated string unchanged = 9;
}

message Batch {
  Schema schema = 1;
  repeated Record records = 2;
  Checkpoint checkpoint = 3;
  WireFormat wire_format = 4;
}
